# Astronomy-Time-Series-Analysis-Toolkit

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  lightcurve_dataset.csv  pyproject.toml
.github/workflows/: test.yml
astrotime/: __init__.py  autocorrelation.py  lightcurve.py  loader.py  periodogram.py  phasefold.py  plotting.py
astrotime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: download_tess_data.py  plot_autocorrelation.py  plot_periodogram.py  quickstart.ipynb
tests/: test_autocorrelation.py  test_lightcurve.py  test_loader.py  test_periodogram.py  test_phasefold.py  test_plot.py
