[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrotime"
version = "0.1.0"
description = "Astronomy-Time-Series-Analysiis-Toolkit"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "astropy>5.0.0",
    "scipy>=1.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0"
]

[tools.setuptools.packages.find]
include = ["astrotime*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]