[project]
name = "astrotime"
version = "0.1.0"
description = "A small toolkit for loading, visualizing, and analyzing astronomical light curves"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Kartik", email = "cepheus2005@gmail.com" },
    { name = "Sheetal", email = "sheetalkhrod@gmail.com" },
    { name = "Pulkit", email = "pulkitsheoran022@gmail.com" },
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "astropy>=5.3",
    "matplotlib>=3.7",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["astrotime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
